--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="kz.shopanov.yelnar.flickr.views.MainActivity">
+    tools:context="kz.shopanov.yelnar.flickr.presentation.ui.main.MainActivity">
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search_black_24dp"
